# diffusion-distillation

./: .gitignore  COLABREADME.md  PLAN.md  README.md  opd.ipynb  pyproject.toml  requirements.txt
configs/: pilot_run.yaml  sd35_run.yaml  sd35m_sd3m_m1_local_quick_run.yaml  sd35m_sd3m_run.yaml
configs/distill/: kl_per_timestep.yaml  sd35_kl.yaml  sd35_kl_m1_quick.yaml
configs/eval/: qualtrics.yaml  quant.yaml
configs/model/: pilot.yaml  sd35.yaml  sd35m_sd3m.yaml  sd35m_sd3m_m1_local.yaml
configs/train/: sd35m_sd3m_m1_quick.yaml  sd35m_sd3m_single_gpu.yaml  single_gpu.yaml
docs/: design.md  experiment_log.md
scripts/: build_teacher_dataset.py  build_teacher_dataset_colab.py  export_qualtrics.py  generate_prompts.py  run_distill.py  run_distill_colab.py  run_eval.py  run_onpolicy_distill_colab.py
scripts/slurm/: run_sd35_e2e_test.slurm
src/opd/: __init__.py
src/opd/data/: __init__.py  dataset.py  prompt_gen.py
src/opd/eval/: __init__.py  qual_metrics.py  quant_metrics.py  survey_export.py
src/opd/models/: __init__.py  pipeline_factory.py  schedulers.py  student.py  teacher.py
src/opd/reward/: __init__.py  kl.py  losses.py  mse.py
src/opd/rollout/: __init__.py  sampling.py  trajectory.py
src/opd/train/: __init__.py  checkpoint.py  loop.py  optimizer.py
src/opd/utils/: __init__.py  device.py  io.py  logging.py
tests/integration/: test_eval_pipeline.py  test_smoke_distill.py
tests/unit/: test_config_load.py  test_device.py  test_kl.py  test_rollout_alignment.py
